# japanese-personal-name-dataset

./: CLAUDE.md  LICENSE  MANIFEST.in  README.md  README_EN.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
dataset/: first_name_man_org.csv  last_name_org.csv
japanese_personal_name_dataset/: __init__.py  api.py  core.py  helpers.py
japanese_personal_name_dataset/dataset/: first_name_man_opti.csv  first_name_woman_opti.csv  first_name_woman_org.csv
tests/: test_core.py  test_helpers.py
